# vermouth-martinize

./: .codecov.yml  .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  .zenodo.json  LICENSE  MANIFEST.in  README.md  embed_test.py  entry_api.py  martinize2.py  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  run_martinize2.py  run_pylint.py  setup.cfg  setup.py  travis.yaml
.github/workflows/: deploy.yml  run_tests.yml
doc/: Makefile
doc/source/: conf.py  data.rst  file_formats.rst  general_overview.rst  graph_algorithms.rst  gromacs_variables.rst  index.rst  martinize2_workflow.rst  processors.rst  technical_background.rst
doc/source/_templates/: layout.html
doc/source/api/: modules.rst  vermouth.dssp.rst  vermouth.gmx.rst  vermouth.pdb.rst  vermouth.processors.rst  vermouth.rst
doc/source/martinize2_tutorials/: basic_usage.rst  elastic_networks.rst  go_models.rst  index.rst  mutations_and_modifications.rst  mutmod.rst  water_biasing.rst
doc/source/tutorials/: basic_usage.rst  elastic_networks.rst  go_models.rst  index.rst  mutations_and_modifications.rst  water_biasing.rst
maintainers/: head_template_data  head_template_py  releasing.md
maintainers/vim/syntax/: README.md  ff.vim
mapping/universal/: CYS.gml  DPP.gml  PHE.gml
martinize2/: __init__.py  deferred_file.py  forcefield.py  graph_utils.py  kdtree.py  martinize2.py  molecule.py  system.py  topology.py  truncating_formatter.py  utils.py
martinize2/data/mappings/: ala.charmm36.map  arg.charmm36.map  cys.charmm36.map  dopc.charmm36.map  dppg.charmm36.map  gly.charmm36.map  ile.charmm36.map  pops.charmm36.map  ser.charmm36.map  val.charmm36.map
martinize2/gmx/: __init__.py  gro.py  itp.py  rtp.py
martinize2/graphing/: grappa.py
martinize2/mapping/universal/: CYS.gml  GLY.gml  HIS.gml  LEU.gml  LYS.gml  NA.gml  PHE.gml  SER.gml  universal.grappa
martinize2/pdb/: __init__.py  pdb.py
martinize2/processors/: __init__.py  apply_blocks.py  apply_posres.py  average_beads.py  canonize_PTMs.py  do_links.py  do_mapping.py  gro_reader.py  make_bonds.py  pdb_reader.py  processor.py  rename_modified_residues.py  repair_graph.py
martinize2/tests/: test_grappa.py
vermouth/: __init__.py  citation_parser.py  deferred_file.py  edge_tuning.py  ffinput.py  ffoutput.py  file_writer.py  forcefield.py  geometry.py  graph_utils.py  ismags.py  log_helpers.py  map_input.py  map_parser.py  martinize2.py  molecule.py  parser_utils.py  selectors.py  setup.py  system.py  truncating_formatter.py  utils.py  vermouth.py
vermouth/data/: __init__.py  canonical.aa.block  citations.bib  data.py  quotes.txt
vermouth/data/grammars/: gmx_rtp.lark
vermouth/data/mappings/: ala.charmm36.map  arg.charmm36.map  arg.charmm36.martini22p.map  arg.gromos.map  asn.charmm36.map  asn.charmm36.martini22p.map  asn.gromos.map  asp.charmm36.map  asp.charmm36.martini22p.map  asp0.gromos.map  atp.gromos.map  chol.charmm36.map  cys.charmm36.map  cys.gromos.map  dmpc.charmm36.map  dopc.charmm36.map  dppc.charmm36.map  dppg.charmm36.map  fad.gromos.map  fmn.gromos.map  gln.charmm36.map  gln.charmm36.martini22p.map  gln.gromos.map  glu.charmm36.map  glu.charmm36.martini22p.map  glu.gromos.map  glu0.gromos.map  gly.charmm36.map  gly.gromos.map  his.charmm.mapping  his.charmm36.map  his.gromos.map  hoh.charmm.mapping  hsd.charmm36.map  hse.charmm36.map  hsp.charmm36.map  ile.charmm36.map  ile.gromos.map  leu.charmm36.map  leu.gromos.map  (+29 more)
vermouth/dssp/: __init__.py  dssp.py
vermouth/gmx/: __init__.py  gro.py  itp.py  itp_read.py  rtp.py  topology.py
vermouth/graphing/: grappa.py
vermouth/oxDNA/: __init__.py  oxDNA.py
vermouth/pdb/: __init__.py  cif.py  nwalign.py  pdb.py
vermouth/processors/: __init__.py  add_molecule_edges.py  annotate_idrs.py  annotate_mut_mod.py  apply_blocks.py  apply_posres.py  apply_rubber_band.py  attach_mass.py  average_beads.py  canonicalize_modifications.py  cif_reader.py  copy_node_attrs.py  do_links.py  do_mapping.py  generate_coordinates.py  go_vs_includes.py  gro_reader.py  idr_cross_domain_interaction_removal.py  idr_interaction_optimising.py  locate_charge_dummies.py  make_bonds.py  merge_all_molecules.py  merge_chains.py  molecule_grouper.py  name_moltype.py  neutral_termini.py  output_logger.py  pdb_reader.py  pdb_writer.py  print_mol_logs.py  processor.py  quote.py  rename_modified_residues.py  repair_graph.py  rtp_polisher.py  set_ff.py  sort_molecule_atoms.py  sort_nodes.py  stash_attributes.py  tune_cystein_bridges.py  (+3 more)
vermouth/rcsu/: __init__.py  contact_map.py  get_go.py  go_pipeline.py  go_structure_bias.py  go_utils.py  go_vs_includes.py  go_water_bias.py
vermouth/redistributed/: LICENSE  __init__.py  kdtree.py
vermouth/tests/: conftest.py  datafiles.py  helper_functions.py  molecule_strategies.py  test_add_molecule_edges.py  test_annotate_idrs.py  test_annotate_mut_mod.py  test_apply_links.py  test_apply_posres.py  test_apply_rubber_band.py  test_average_beads.py  test_cif_reader.py  test_do_mapping.py  test_dssp.py  test_edge_tuning.py  test_ff_files.py  test_ffinput.py  test_file_writer.py  test_forcefield.py  test_geometry.py  test_go_vs_includes.py  test_graph_utils.py  test_grappa.py  test_hypothesis_graph_utils.py  test_idr_cross_domain_interaction_removal.py  test_idr_interaction_optimising.py  test_ismags.py  test_itp_files.py  test_links.py  test_logging.py  test_make_bonds.py  test_map_input.py  test_map_parser.py  test_mapping_integrative.py  test_merge_chains.py  test_mol_grouper.py  test_molecule.py  test_name_moltype.py  test_native_forcefield.py  test_neutral_termini.py  (+15 more)
vermouth/tests/data/: 1UBQ_nocell_occupancy.cif  cif_missing_atomname.cif  cif_missing_resname.cif  multiple.cif  test_molecule_contacts.out
vermouth/tests/gmx/: test_gro.py  test_itp.py  test_topology.py
vermouth/tests/integration_tests/: test_integration.py
vermouth/tests/pdb/: test_cif.py  test_nwalign.py  test_read_pdb.py  test_write_pdb.py
vermouth/tests/rcsu/: test_contact_map.py  test_go_structure_bias.py  test_go_utils.py  test_read_go_map.py
(+529 files in other folders)
