[build-system]
requires = [
        "wheel",
        "setuptools >= 30.3.0",
        "pbr",
    ]
build-backend = "pbr.build"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["vermouth/tests"]
python_files = "test_*.py"

[tool.coverage.run]
branch = true
omit = ["vermouth/tests/*", "vermouth/redistributed/*", '*/bin/pytest']
source_pkgs = ["vermouth"]
