[wheel]
universal = 1

[metadata]
name = vermouth
author = P C Kroon
author_email = p.c.kroon@rug.nl
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://github.com/marrink-lab/vermouth-martinize
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = martini MD martinize

[options]
packages = find:
setup-requires =
    setuptools >= 30.3.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
    numpy
    networkx >= 2.0
    scipy
zip-safe = False

[options.extras_require]
mdtraj = mdtraj
PyCifRW = PyCifRW

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
warning-is-error = True
builder = html
